app/assets/stylesheets/brooklyn_pizzas.css.scss
.container {

/*TEMPORARY, USE MEDIA QUERIES INSTEAD*/

/*TEMPORARY, USE MEDIA QUERIES INSTEAD*/
}

html, body {
  padding: 0 !important;
  margin: 0 !important;
  overflow: hidden;
}

#rangers {
  background: url('/assets/nyr_logo.png') repeat;
  margin-bottom: 0px;
}

.jumbotron {
  opacity: .97;
  margin-top: 40px;

  p {
    font-family: 'Arimo', sans-serif;
    text-align: center;
  }

  .btn {
  	margin: 5px 5px;
  }
}

.alert {
  margin-top: 40px;
}

.navbar-inverse {
	margin-bottom: 0px;
	border-radius: 0px;
}

.justified {
  text-align: justify;
  color: #000;
}

h2 {
  color: #000;
  text-align: center;
}

